// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Headings should render correctly (snapshot) 1`] = `
<div>
  <h1
    class="ant-typography mdx-heading dark:text-light heading h1 css-dev-only-do-not-override-j0nf2s"
  >
    Heading
  </h1>
</div>
`;

exports[`Headings should render correctly (snapshot) 2`] = `
<div>
  <h2
    class="ant-typography mdx-heading dark:text-light heading h2 css-dev-only-do-not-override-j0nf2s"
  >
    Heading
  </h2>
</div>
`;

exports[`Headings should render correctly (snapshot) 3`] = `
<div>
  <h3
    class="ant-typography mdx-heading dark:text-light heading h3 css-dev-only-do-not-override-j0nf2s"
  >
    Heading
  </h3>
</div>
`;

exports[`Headings should render correctly (snapshot) 4`] = `
<div>
  <h4
    class="ant-typography mdx-heading dark:text-light heading h4 css-dev-only-do-not-override-j0nf2s"
  >
    Heading
  </h4>
</div>
`;

exports[`Headings should render correctly (snapshot) 5`] = `
<div>
  <h5
    class="ant-typography mdx-heading dark:text-light heading h5 css-dev-only-do-not-override-j0nf2s"
  >
    Heading
  </h5>
</div>
`;

exports[`Headings should render correctly (snapshot) 6`] = `
<div>
  <h5
    class="ant-typography mdx-heading dark:text-light heading h6 css-dev-only-do-not-override-j0nf2s"
  >
    Heading
  </h5>
</div>
`;
